<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/type"
            android:fontFamily="sans-serif-light"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="71"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_weight="0.24"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:paddingRight="7dp"
            android:text="@string/type_list_entry"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:id="@+id/Detail"
            android:layout_weight="0.73"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/alarmImage"
            android:layout_toLeftOf="@+id/alarmImage" />

        <ImageView
            android:id="@+id/alarmImage"
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/time"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/time"
            android:layout_toLeftOf="@+id/time"
            android:src="@drawable/ic_action_alarms" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/time_vie"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/date"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="right" />

</LinearLayout>
