
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Note">

    <ScrollView

        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:showDividers="middle"
            android:weightSum="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/view_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"></View>

            <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.47"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/view_detail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:background="@color/white"></View>

            <LinearLayout
                android:layout_width="fill_parent"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_weight="0.27"
                android:background="@color/purple_700"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/note_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_700"
                    android:paddingLeft="10dp"
                    android:text="Reminder type: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/note_type_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/purple_700"
                    android:paddingLeft="10dp"
                    android:text="@string/note_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.20"
                android:background="@color/purple_700"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="100dp"
                    android:background="@color/purple_700"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/alarm_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_700"
                        android:paddingLeft="10dp"
                        android:text="@string/alarmtext"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/alertvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/datevalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
